//ALL REQUEST PROTOS SHOULD INCLUDE A MinimumUserProto AS optional that represents which client sent it/triggered it 
//DO NO START PROPERTY METHODS WITH THE WORDS NEW OR COPY

import "InAppPurchase.proto";
import "User.proto";

package proto;

option java_package = "com.lvl6.mobsters.eventprotos";
option java_outer_classname = "EventInAppPurchaseProto";
//DO NOT USE ID AS THE NAME OF A PROPERTY IN ANY PROTO

message InAppPurchaseRequestProto {
	optional MinimumUserProto sender = 1;
	optional string receipt = 2;
	optional string localcents = 3;
	optional string localcurrency = 4;
	optional string locale = 5;
	optional string ipaddr = 6;
}

																						//DONE
message InAppPurchaseResponseProto {
	optional MinimumUserProto sender = 1;
	optional InAppPurchaseStatus status = 2;
	optional int32 gemsGained = 3;
	optional int32 cashGained = 4;
	optional string packageName = 5;
	optional double packagePrice = 6;
	optional string receipt = 7;
	
	enum InAppPurchaseStatus {
		SUCCESS = 1;
		FAIL = 2;
		DUPLICATE_RECEIPT = 3;
	}
}

//------------------------------------------------------------------------------------------

message EarnFreeGemsRequestProto {
	optional MinimumUserProto sender = 1;
	optional EarnFreeGemsType freeGemsType = 2 [default = FB_CONNECT];
	optional int64 clientTime = 3;
		
}

message EarnFreeGemsResponseProto {
	optional MinimumUserProto sender = 1;
	optional EarnFreeGemsStatus status = 2;
	optional EarnFreeGemsType freeGemsType = 3 [default = FB_CONNECT];
	
	enum EarnFreeGemsStatus {
		SUCCESS = 1;
		CLIENT_TOO_APART_FROM_SERVER_TIME = 2;
		METHOD_NOT_SUPPORTED = 3;
		OTHER_FAIL = 4;
	}
}

//------------------------------------------------------------------------------------------

